k8s/rbac-test/istio/httpbin/foo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foo
  labels:
    istio-injection: enabled
